--- a/simpleGridTemplate.css
+++ b/simpleGridTemplate.css
@@ -61,6 +61,7 @@ header {
 }
 .thumbnail {
 	width: 23%;
+	height: 350px;
 	text-align: center;
 	float: left;
 	margin-top: 35px;
@@ -68,10 +69,13 @@ header {
 	padding-bottom: 20px;
 	margin-left: 1%;
 	margin-right: 1%;
-	border-radius: 3px;
 	padding-top: 20px;
 	border-bottom: 4px solid #6DC7D0;
     border-radius: 5px;
+}
+.thumbnail:hover {
+	transform: scale(1.003);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .gallery .thumbnail h4 {
 	margin-top: 5px;
@@ -169,7 +173,8 @@ footer {
 	background-color: #f4ad42;
 }
 .profile {
-	width: 50%;
+	width: 350px;
+	height: 350px;
 	border-radius: 50%;
 }
 .gallery .thumbnail .tag {
