--- a/simpleGridTemplate.css
+++ b/simpleGridTemplate.css
@@ -47,6 +47,9 @@ header {
 	padding-right: 20px;
 	color: #A3A3A3;
 }
+.text_footer {
+	text-decoration: none;
+}
 .gallery {
 	clear: both;
 	display: inline-block;
@@ -61,7 +64,7 @@ header {
 }
 .thumbnail {
 	width: 23%;
-	height: 350px;
+	height: 400px;
 	text-align: center;
 	float: left;
 	margin-top: 35px;
