--- a/Excel/BlogPostAssets/styles/blogPostStyle.css
+++ b/Excel/BlogPostAssets/styles/blogPostStyle.css
@@ -2,11 +2,10 @@
 body {
 	font-family: 'Kavivanar', cursive;
 	display: grid;
-	grid-template-columns: 10% auto;
+	grid-template-columns: 5% auto;
 	grid-template-rows: auto;
 }
 #navbar{
-	border: 5px solid black;
 }
 #navbar ul{
 	list-style-type: none;
@@ -17,24 +16,39 @@ body {
 	padding: 0px;
 	margin: 0px;
 }
-#header {
-	border: 5px solid black;
-	background-color: #DCDCDC;
-	display: block;
+#navbar a {
+	text-decoration: none;
+	color: black;
+}
+#content{
 	margin: 5em 2em 0 2em;
+	padding: 0px;
+}
+#header {
+	border-bottom: 1px solid black;
+	background-color: #f4ad42;
+	display: block;
+	padding: 0px;
+	margin: 0px;
 }
 #header h1 {
 	margin-left: 20px;
 	margin-bottom: 0px;
+	margin-top: 10px;
+	font-size: 80px;
+	font-family: 'Abril Fatface', cursive;
+	color: #FFFFFF;
 }
 #header h3 {
-	color: #696969;
+	color: black;
 	margin-left: 20px;
 	margin-top: 0px;
 }
 #wrapper {
+	padding: 1em;
 	grid-column: 2 / 3;
-	margin: 1em 2em 0 2em;
+	font-size: 30px;
+	background-color: #5D5E5D;
 }
 @media screen and (max-width:769px) {
 	
