--- a/Excel/BlogPostAssets/styles/blogPostStyle.css
+++ b/Excel/BlogPostAssets/styles/blogPostStyle.css
@@ -43,12 +43,21 @@ body {
 	color: black;
 	margin-left: 20px;
 	margin-top: 0px;
+	
+}
+a {
+	color: black;
+	text-decoration: none;
 }
 #wrapper {
-	padding: 1em;
+	padding: .2em 1em 2em 1em;
 	grid-column: 2 / 3;
-	font-size: 30px;
+	font-size: 20px;
+	color: #FFFFFF;
 	background-color: #5D5E5D;
+}
+#wrapper img {
+	width: 100%;
 }
 @media screen and (max-width:769px) {
 	
