--- a/simpleGridTemplate.css
+++ b/simpleGridTemplate.css
@@ -18,6 +18,41 @@ header {
 	height: 8%;
 	background-color: #5D5E5D;
 	border-bottom: 1px solid #353635;
+    margin-bottom: 0px;
+}
+.fixed {
+    left: 0px;
+    z-index: 1000;
+    position: fixed;
+    top: 0px;
+    margin-top: 0px;
+    width: 100%;
+    height: 30px;
+}
+.menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #F8F8F8;
+    border-bottom: 1px solid #353635;
+}
+.menu ul li {
+    width: 20%;
+    float: left;
+}
+.menu a {
+    /*display: block;
+    padding 8px;
+    background-color: yellow;*/
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.fixed ul li {
+    color: red;
 }
 .logo {
 	font-family: 'Abril Fatface', cursive;
@@ -102,7 +137,7 @@ header {
     text-decoration: none;
     color: #4892a5;
 }
-a:hover {
+.gallery a:hover {
     font-weight: bold;
     color: #264a54;
 }
