--- a/Best Cources/assets/styles/blogPostStyle.css
+++ b/Best Cources/assets/styles/blogPostStyle.css
@@ -5,22 +5,22 @@ body {
 	grid-template-columns: 5% auto;
 	grid-template-rows: auto;
 }
-#navbar{
-}
 #navbar ul{
 	list-style-type: none;
 	font-size: 50px;
 	position: fixed;
 	top: 0px;
-	left: 0px;
+	left: 50px;
 	padding: 0px;
 	margin: 0px;
+    z-index: 0;
 }
 #navbar a {
 	text-decoration: none;
 	color: black;
 }
 #content{
+    z-index: 1;
 	margin: 5em 2em 0 2em;
 	padding: 0px;
 }
@@ -57,6 +57,11 @@ a {
 	color: #FFFFFF;
 	background-color: #5D5E5D;
 }
+#wrapper h3 {
+	font-family: 'Kavivanar', cursive;
+	font-weight: bold;
+	text-decoration: underline;
+}
 #thumbnail {
     margin-top: 20px;
     display: block;
@@ -71,13 +76,14 @@ a {
     margin-left: 10px;
     width: 100px;
     height: 100px;
-    display: inline-block;
+    float: left;
 }
 #examples #thumbnail p {
     font-size: 50px;
     display: inline-block;
-    height: 25px;
+    height: 40px;
     margin-top: 10px;
+    margin-left: 50px;
     padding: 0px;
 }
 @media screen and (max-width:769px) {
