--- a/Projects/Word/assets/styles/blogPostStyle.css
+++ b/Projects/Word/assets/styles/blogPostStyle.css
@@ -23,7 +23,7 @@ body {
 }
 #header {
 	border-bottom: 1px solid black;
-	background-color: #f4ad42;
+	background: linear-gradient(to bottom right, #ff7f00, #f4ad42, #ffcc7f);
 	display: block;
 	padding: 0px;
 	margin: 0px;
