--- a/assets/simpleGridTemplate.css
+++ b/assets/simpleGridTemplate.css
@@ -2,23 +2,20 @@
 /* Body */
 body {
 	font-family: 'Nunito', Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
-	background-color: #FFFFFF;
-	margin: 0;
 }
 /* Container */
 .container {
-	width: 90%;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: #FFFFFF;
+    margin: 0px;
+    margin-left: 50px;
+    margin-right: 400px;
+    padding: 0px;
 }
 /* Header */
 header {
-	width: 100%;
-	height: 8%;
-	background-color: #5D5E5D;
-	border-bottom: 1px solid #353635;
-    margin-bottom: 0px;
+    font-family: 'Coming Soon', cursive;
+    padding: 0px;
+    line-height: 0px;
+    font-size: 100px;
 }
 .fixed {
     left: 0px;
@@ -29,58 +26,23 @@ header {
     width: 100%;
     height: 30px;
 }
+.menu {
+    
+}
 .menu ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #F8F8F8;
-    border-bottom: 1px solid #353635;
 }
 .menu ul li {
-    width: 20%;
-    float: left;
 }
 .menu a {
-    /*display: block;
-    padding 8px;
-    background-color: yellow;*/
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
 }
 .fixed ul li {
-    color: red;
 }
 .logo {
-	font-family: 'Abril Fatface', cursive;
-	color: #fff;
-	font-weight: bold;
-	letter-spacing: 2px;
-	text-align: left;
-	padding-top: 15px;
-	margin: 0.5em auto 0px .5em;
-	padding-bottom: 10px;
-	font-size: 80px;
 }
 .hero_header {
-	color: #FFFFFF;
-	text-align: center;
-	margin: 0;
-	letter-spacing: 2px;
 }
 /* About Section */
 .text_column {
-	width: 90%;
-	text-align: left;
-	font-weight: lighter;
-	line-height: 25px;
-	float: left;
-	padding-left: 20px;
-	padding-right: 20px;
-	color: #A3A3A3;
 }
 .gallery {
 	clear: both;
@@ -143,21 +105,6 @@ header {
 }
 /* More info */
 .intro {
-	background-color: #FFFFFF;
-	padding-bottom: 35px;
-}
-.column {
-	width: 50%;
-	text-align: center;
-	padding-top: 30px;
-	float: left;
-}
-.intro .column h3 {
-	color: #FFFFFF;
-	text-align: center;
-}
-.intro .column p {
-	color: #FFFFFF;
 }
 .cards {
 	width: 100%;
@@ -219,13 +166,9 @@ footer {
 	padding-bottom: 60PX;
 }
 .intro {
-	display: inline-block;
-	background: linear-gradient(to bottom right, #ff7f00, #f4ad42, #ffcc7f);
+	/*background: linear-gradient(to bottom right, #ff7f00, #f4ad42, #ffcc7f);*/
 }
 .profile {
-	width: 350px;
-	height: 350px;
-	border-radius: 50%;
 }
 .gallery .thumbnail .tag {
 	color: #5D5E5D;
