--- a/assets/simpleGridTemplate.css
+++ b/assets/simpleGridTemplate.css
@@ -1,296 +1,262 @@
 @charset "UTF-8";
-/* Body */
 body {
-	font-family: 'Nunito', Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+    margin: 0;
 }
-/* Container */
-.container {
-    margin: 0px;
-    margin-left: 50px;
-    margin-right: 400px;
-    padding: 0px;
-}
-/* Header */
-header {
-    font-family: 'Coming Soon', cursive;
-    padding: 0px;
-    line-height: 0px;
-    font-size: 100px;
-}
-.fixed {
-    left: 0px;
-    z-index: 1000;
-    position: fixed;
-    top: 0px;
-    margin-top: 0px;
-    width: 100%;
-    height: 30px;
-}
+
 .menu {
-    
-}
-.menu ul {
-}
-.menu ul li {
-}
-.menu a {
-}
-.fixed ul li {
-}
-.logo {
-}
-.hero_header {
-}
-/* About Section */
-.text_column {
-}
-.gallery {
-	clear: both;
-	display: inline-block;
-	width: 100%;
-	background-color: #FFFFFF;
-	/* [disabled]min-width: 400px;
-*/
-	padding-bottom: 35px;
-	padding-top: 0px;
-	margin-top: -5px;
-	margin-bottom: 0px;
-}
-.thumbnail {
-	width: 23%;
-	height: 400px;
-	text-align: center;
-	float: left;
-	margin-top: 35px;
-	background-color: #F8F8F8;
-	padding-bottom: 20px;
-	margin-left: 1%;
-	margin-right: 1%;
-	padding-top: 20px;
-	border-bottom: 4px solid #6DC7D0;
-    border-radius: 5px;
-}
-.thumbnail:hover {
-	transform: scale(1.003);
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.gallery .thumbnail h4 {
-	margin-top: 5px;
-	margin-bottom: 5px;
-	color: #52BAD5;
-	text-align: left;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-.gallery .thumbnail i {
-    color: #B3B3B3;
-    font-size: 13px;
+    background: black;
+    height:2em;
+    padding:.5em;
+    position:absolute;
     display: block;
-    padding: 0px;
-    margin: 0px;
+    top:170px;
+    width:100%;
+    z-index: 10;
 }
-.gallery .thumbnail p {
-	margin: 0;
-	color: #B3B3B3;
-	text-align: left;
-	padding-left: 20px;
+
+.fixed {
+    position:fixed;
+    top:0;
 }
-.text_footer a {
+
+.menu_item:hover {
+    color: lightpink;
+}
+
+a {
     text-decoration: none;
-    color: #4892a5;
-}
-.gallery a:hover {
-    font-weight: bold;
-    color: #264a54;
-}
-/* More info */
-.intro {
-}
-.cards {
-	width: 100%;
-	height: auto;
-	max-width: 400px;
-	max-height: 200px;
-	opacity: 0.8;
-}
-.intro .column p {
-	padding-left: 30px;
-	padding-right: 30px;
-	text-align: justify;
-	line-height: 25px;
-	font-weight: lighter;
-	margin-left: 20px;
-	margin-right: 20px;
-	width: 80%;
-	margin-top: 4%;
-}
-.button {
-	width: 400px;
-	margin-top: 40px;
-	margin-right: auto;
-	margin-bottom: auto;
-	margin-left: auto;
-	padding-top: 20px;
-	padding-right: 10px;
-	padding-bottom: 20px;
-	padding-left: 10px;
-	text-align: center;
-	vertical-align: middle;
-	border-radius: 0px;
-	text-transform: uppercase;
-	font-weight: bold;
-	letter-spacing: 2px;
-	border: 3px solid #FFFFFF;
-	color: #FFFFFF;
-	transition: all 0.3s linear;
-}
-.button:hover {
-	background-color: #6DC7D0;
-	color: #FFFFFF;
-	cursor: pointer;
-}
-.copyright {
-	text-align: center;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	background-color: #717070;
-	color: #FFFFFF;
-	text-transform: uppercase;
-	font-weight: lighter;
-	letter-spacing: 2px;
-	border-top-width: 2px;
-}
-footer {
-	background-color: #B3B3B3;
-	padding-top: 60px;
-	padding-bottom: 60PX;
-}
-.intro {
-	/*background: linear-gradient(to bottom right, #ff7f00, #f4ad42, #ffcc7f);*/
-}
-.profile {
-}
-.gallery .thumbnail .tag {
-	color: #5D5E5D;
-	padding-bottom: 4px;
-	padding-top: 4px;
-	text-align: left;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-.tag a {
-    color: #5D5E5D;
-    text-decoration: none;
+    color: inherit;
 }
 
-/* Mobile */
-@media (max-width: 414px) {
-.logo {
-	width: 100%;
-	text-align: center;
-	margin-top: 13px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-    font-size: 22px;
-}
-.text_column {
-	width: 100%;
-	text-align: justify;
-	padding: 0;
-}
-.intro .column p {
-	width: 80%;
-	margin-left: 0px;
-}
-.text_column {
-	padding-left: 20px;
-}
-.thumbnail {
-	width: 100%;
-    border-radius: 0px;
-}
-.column {
-	width: 100%;
-	margin-top: 0px;
-}
-.hero_header {
-	padding-left: 10px;
-	padding-right: 10px;
-	line-height: 22px;
-	text-align: center;
-}
-.profile {
-	border-radius: 0%;
-    height: 100%;
-}
+#body {
+    display: block;
+    position: absolute;
+    width: 80%;
+    right: 50%;
+    margin: 7em -40% 5em 0;
 }
 
-/* Small Tablets */
-@media (min-width: 415px)and (max-width: 769px) {
-.logo {
-	width: 100%;
-	text-align: center;
-	margin-top: 13px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-    font-size: 50px;
+/*----------------FULL SCREEN----------------*/
+@media only screen and (min-width: 801px) {
+    #welcome{
+        width: 60em;
+        height: 12em;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -6em 0 0 -30em;
+    }
+    
+    #welcome_title-1 {
+        font-size: 8em;
+        width: 7em;
+        height: 1.2em;
+        text-align: center;
+        margin: auto;
+    }
+    
+    #welcome_title-2 {
+        font-size: 1em;
+        font-family: 'Open Sans', sans-serif;
+        color: #686868;
+        width: 10em;
+        height: 1.2em;
+        text-align: right;
+        float: right;
+        margin-right: 8em;
+        margin-top: -1.6em;
+    }
+    
+    #title {
+        margin: .1em 0 0 .2em;;
+        width: 7em;
+        text-align: center;
+        font-size: 8em;
+        padding: 0;
+    }
+    
+    #menu_container {
+        width: 49em;
+        margin: auto;
+    }
+    
+    .menu_item {
+        text-align: center;
+        font-size: 1.5em;
+        font-family: 'Julius Sans One', sans-serif;
+        margin-top: .2em;
+        list-style: none;
+        display: inline-block;
+        width: 8em;
+        color: whitesmoke;
+    }
+    
+    .wrapper {
+        box-shadow: 10px 10px 5px grey;
+        padding: 10px 20px 0px 20px;
+        margin: 0px 20% 50px 20%;
+    }
+    
+    .wrapper .date {
+        text-align: right;
+        font-family: sans-serif;
+        color: darkgray;
+        padding: 0px;
+        margin: 0px;
+    }
+    
+    .wrapper .header {
+        font-family: sans-serif;
+        font-size: 3em;
+        margin-bottom: 0px;
+        margin-top: 20px;
+    }
+    
+    .wrapper .sub {
+        margin-top: 0px;
+        margin-bottom: 10px;
+        font-size: 1em;
+        color: grey;
+    }
+    
+    .content {
+        padding: 20px;
+    }
+    
+    .wrapper .content .image {
+        margin: 0px 10% 0px 10%;
+    }
+    
+    .wrapper img {
+        max-width: 100%;
+        max-height: 100%;
+        border: 5px dashed black;
+    }
+    
+    .content p {
+        font-family: cursive;
+        font-size: 20px;
+        text-align: justify;
+    }
+    
+    .content .signature {
+        font-style: italic;
+        text-align: right;
+        margin-right: 30px;
+    }
 }
-.text_column {
-	width: 100%;
-	text-align: left;
-	padding: 0;
-}
-.thumbnail {
-	width: 100%;
-}
-.column {
-	width: 100%;
-	margin-top: 0px;
-}
-.thumbnail {
-	width: 100%;
-    border-radius: 0px;
-}
-.text_column {
-	padding-left: 20px;
-	padding-right: 20px;
-	width: 90%;
-}
-.column {
-	width: 100%;
-	margin-left: 0px;
-	margin-right: 0px;
-}
-.profile {
-	width: 100%;
-}
-.intro .column p {
-	width: 90%;
-	text-align: center;
-	padding-left: 0px;
-}
-.profile {
-	border-radius: 0%;		
-}
-}
+/*-----------------------------------------*/
 
-/* Small Desktops */
-@media (min-width: 770px) and (max-width: 1096px) {
-.text_column {
-	width: 100%;
+/*-----------------------------------------*/
+
+/*----------------HALF SCREEN--------------*/
+@media only screen and (max-width: 800px) {
+    #welcome {
+        width: 30em;
+        height: 15em;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -7.5em 0 0 -15em;
+    }
+    
+    #welcome_title-1 {
+        font-size: 6em;
+        width: 5em;
+        height: 1.2em;
+        text-align: center;
+        margin: auto;
+    }
+    
+    #welcome_title-2 {
+        font-size: 1em;
+        font-family: 'Open Sans', sans-serif;
+        color: #686868;
+        width: 10em;
+        height: 1.2em;
+        text-align: right;
+        float: right;
+        margin-right: 5em;
+        margin-top: 6em;
+    }
+    
+    #title {
+        margin: .5em auto 0 auto;
+        width: 7em;
+        text-align: center;
+        font-size: 5em;
+        padding: 0;
+    }
+    
+    #menu_container {
+        width: 36em;
+        margin: auto;
+    }
+    
+    .menu_item {
+        text-align: center;
+        font-size: 1.1em;
+        font-family: 'Julius Sans One', sans-serif;
+        margin-top: .2em;
+        list-style: none;
+        display: inline-block;
+        width: 8em;
+        color: whitesmoke;
+    }
+    
+    .wrapper {
+        box-shadow: 10px 10px 5px grey;
+        padding: 10px 20px 0px 20px;
+        margin: 0px 10px 50px 10px;
+    }
+    
+    .wrapper .date {
+        text-align: right;
+        font-family: sans-serif;
+        color: darkgray;
+        padding: 0px;
+        margin: 0px;
+    }
+    
+    .wrapper .header {
+        font-family: sans-serif;
+        font-size: 1.5em;
+        margin-bottom: 0px;
+        margin-top: 20px;
+    }
+    
+    .wrapper .sub {
+        margin-top: 0px;
+        margin-bottom: 5px;
+        font-size: 1em;
+        color: grey;
+    }
+    
+    .content {
+        padding: 20px;
+    }
+    
+    .wrapper .content .image {
+        margin: 0px 10% 0px 10%;
+    }
+    
+    .wrapper img {
+        max-width: 100%;
+        max-height: 100%;
+        border: 2px dashed black;
+        
+    }
+    
+    .content p {
+        font-family: cursive;
+        font-size: 18px;
+        text-align: justify;
+    }
+    
+    .content .signature {
+        font-style: italic;
+        text-align: right;
+        margin-right: 10px;
+    }
 }
-.thumbnail {
-	width: 48%;
-    border-radius: 5px;
-}
-.text_column {
-	width: 90%;
-	margin: 0;
-	padding: 20px;
-}
-.intro .column p {
-	width: 80%;
-}
-}
+/*-------------------------------------------*/
