front page almost done

--- a/assets/simpleGridTemplate.css
+++ b/assets/simpleGridTemplate.css
@@ -13,13 +13,16 @@ body {
     width: 90%;
     z-index: 10;
 }
+#title {
+    font-family: 'Sarabun', sans-serif;
+}
 .fixed {
     position:fixed;
     top:0;
 }
 
 .menu_item:hover {
-    color: lightpink;
+    color: orange;
 }
 
 a {
@@ -47,15 +50,12 @@ a {
 	clear: both;
 	display: inline-block;
 	width: 100%;
-	background-color: #FFFFFF;
-	 /*[disabled]min-width: 400px;
-    */
+	 /*[disabled]min-width: 400px;*/
 	padding-bottom: 35px;
 	padding-top: 0px;
-	margin-top: -20px;
 	margin-bottom: 0px;
-    width: 80%;
-    margin-left: 10%;
+    width: 90%;
+    margin-left: 5%;
 }
 .thumbnail {
 	width: 23%;
@@ -63,12 +63,12 @@ a {
 	text-align: center;
 	float: left;
 	margin-top: 35px;
-	background-color: #F8F8F8;
+	background-color: #f2f2f2;
 	padding-bottom: 20px;
 	margin-left: 1%;
 	margin-right: 1%;
 	padding-top: 20px;
-	border-bottom: 4px solid #6DC7D0;
+	border-bottom: 4px solid #e0e0e0;
     border-radius: 5px;
 }
 .thumbnail:hover {
@@ -106,7 +106,6 @@ a {
 }
 /* More info */
 .intro {
-	/*background: linear-gradient(to bottom right, #ff7f00, #f4ad42, #ffcc7f);*/
     font-family: 'Thasadith', sans-serif;
 	padding-bottom: 55px;
 }
@@ -139,15 +138,16 @@ a {
 	transition: all 0.3s linear;
 }
 .button:hover {
-	background-color: #6DC7D0;
+	background-color: #7a795e;
 	color: #FFFFFF;
 	cursor: pointer;
 }
 .copyright {
+    font-family: 'Sarabun', sans-serif;
 	text-align: center;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	background-color: #717070;
+	background-color: black;
 	color: #FFFFFF;
 	text-transform: uppercase;
 	font-weight: lighter;
@@ -155,9 +155,10 @@ a {
 	border-top-width: 2px;
 }
 footer {
-	background-color: #B3B3B3;
+	background: linear-gradient(to bottom right, #ff7f00, #f4ad42, #ffcc7f);
 	padding-top: 60px;
 	padding-bottom: 60PX;
+    font-family: 'Noto Sans', sans-serif;
 }
 .profile {
 	width: 350px;
@@ -183,7 +184,6 @@ footer {
         width: 90%;
         margin-left: 5%;
     }
-    
     #title {
         font-family: 'Sarabun', sans-serif;
         margin: .1em 0 0 .2em;
@@ -199,6 +199,7 @@ footer {
     .intro img {
         float: right;
         width: 400px;
+        padding-left: 30px;
     }
     #menu_container {
         width: 49em;
