tablet size fixed

--- a/assets/simpleGridTemplate.css
+++ b/assets/simpleGridTemplate.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 body {
     margin: 0;
-    background: #fffcf9
+    background: #fffcf9;
+    overflow-x: hidden;
 }
 .menu {
     background: black;
@@ -335,7 +336,7 @@ footer {
         margin-left: 2.5%;
     }
     #title {
-        margin: .5em auto 0 auto;
+        margin: .5em auto 50px auto;
         text-align: center;
         font-size: 3em;
         padding: 0;
@@ -347,6 +348,13 @@ footer {
     }
     .fixed {
         top: 0;
+    }
+    .intro img {
+        width: 100%;
+    }
+    .intro p {
+        font-size: 28px;
+        text-align: center;
     }
     #menu_container {
         width: 36em;
@@ -362,14 +370,6 @@ footer {
         display: inline-block;
         width: 8em;
         color: whitesmoke;
-    }
-    .intro {
-        margin-top: 100;
-    }
-    .intro img {
-        float: right;
-        width: 400px;
-        padding-left: 30px;
     }
     .text_column {
         width: 100%;
@@ -397,14 +397,38 @@ footer {
 
 /* Mobile */
 @media (max-width: 414px) {
-    .logo {
+    .menu {
+        width: 100%;
+        margin-left: -2.5%;
+    }
+    .fixed {
+        top: 0;
+    }
+    #menu_container {
+        width: 49em;
+        margin: auto;
+    }
+    
+    .menu_item {
+        text-align: center;
+        font-size: 1em;
+        font-family: 'Julius Sans One', sans-serif;
+        margin-top: .2em;
+        list-style: none;
+        display: inline-block;
+        width: 5em;
+        color: whitesmoke;
+    }
+    .intro {
+        margin-top: 400;
+    }
+    .intro img {
         width: 100%;
         text-align: center;
         margin-top: 13px;
         margin-right: 0px;
         margin-bottom: 0px;
         margin-left: 0px;
-        font-size: 22px;
     }
     .text_column {
         width: 100%;
