--- a/assets/simpleGridTemplate.css
+++ b/assets/simpleGridTemplate.css
@@ -347,9 +347,9 @@ footer {
         margin-left: 2.5%;
     }
     #title {
-        margin: .5em auto 50px auto;
+        margin: auto auto 90px auto;
         text-align: center;
-        font-size: 3em;
+        font-size: 60px;
         padding: 0;
     }
     .menu {
@@ -361,11 +361,13 @@ footer {
         top: 0;
     }
     .intro img {
-        width: 100%;
+        display: none;
     }
     .intro p {
-        font-size: 28px;
+        font-size: 40px;
         text-align: center;
+        width: 80%;
+        margin-left: 10%;
     }
     #menu_container {
         width: 36em;
@@ -408,9 +410,15 @@ footer {
 
 /* Mobile */
 @media (max-width: 414px) {
+    #title {
+        text-align: center;
+    }
     .menu {
+        top: 0px;
         width: 100%;
-        margin-left: -2.5%;
+        display: block;
+        position: relative;
+        /*margin-left: -2.5%;*/
     }
     .fixed {
         top: 0;
@@ -431,15 +439,21 @@ footer {
         color: whitesmoke;
     }
     .intro {
-        margin-top: 400;
+        text-align: center;
+        width: 80%;
+        margin-left: 10%;
+        font-size: 20px;
     }
-    .intro img {
+    /*.intro img {
         width: 100%;
         text-align: center;
         margin-top: 13px;
         margin-right: 0px;
         margin-bottom: 0px;
         margin-left: 0px;
+    }*/
+    .intro img {
+        display: none;
     }
     .text_column {
         width: 100%;
