--- a/assets/simpleGridTemplate.css
+++ b/assets/simpleGridTemplate.css
@@ -33,6 +33,9 @@ a {
     text-decoration: none;
     color: inherit;
 }
+.intro p b a:hover {
+    color: #ff7f00;
+}
 .hero_header {
 	color: #FFFFFF;
 	text-align: center;
